# oil-simulator-py

./: .gitignore  INDUSTRIAL_ROADMAP.md  PARAVIEW_INSTRUCTIONS.md  PLAN.md  README.md  ROADMAP.md  benchmark_cpu_large.py  check_impes.py  compare_solvers.py  detailed_impes_check.py  fi_debug_small.py  mkdocs.yml  profile_mega3d.prof  profile_mega3d.py  profile_mega3d_gas.prof  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  run_fi_demo.py  sitecustomize.py  test_fim_run.py
bench/: bench.py  bench_geoamg_large.py
configs/: boundary_test.json  debug_small_2d.json  dynamic_demo.json  fast_test.json  fi_3d_jfnk.json  fi_demo_2d.json  fi_demo_strong.json  fi_mid_3d.json  fi_no_amg_3d.json  front_big_2d.json  fully_implicit_2d.json  fully_implicit_2d_smooth.json  fully_implicit_3d.json  gas_exsolution_3d.json  gas_injection_3phase.json  impes_2d.json  impes_large_multiwell_3d.json  industrial_3d.json  jfnk_cpr_debug.json  large_3d.json  large_fi_3d.json  medium_2d.json  mega_3d.json  mega_3d_real.json  mega_3phase_million.json  mega_impes.json  memory_test.json  quick_demo_2d.json  realistic_waterflood_3d.json  safe_test_2d.json  temp_impes_benchmark.json  test_config.json  test_config_3d.json  test_fim_compare.json  test_fim_million.json  test_fim_small.json  test_manual_fim.json  test_no_wells.json  test_scaling.json  three_phase_drive.json  (+9 more)
docs/: 3D_VISUALIZATION.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  BASIC_CONCEPTS.md  CHANGELOG.md  CLASSICAL_AMG_CPR_FIX.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GALERKIN_RAP_UPGRADE.md  (+15 more)
(+127 files in other folders)
